# local_lab

./: .gitignore  README.md  _redirects  kafka.sh  pyproject.toml  requirements.txt  script.sh  wrangler.toml
.cloudeflare/: project.toml
ci/couverage/: README.md
docker/env/: .env-template
docs/: STYLE.md  TESTING-STRATEGY.md
docs/ADRs/: ADR-001-time-compression.md
docs/architecture/: STYLE.md
docs/architecture/icons/: README.md
docs/architecture/sources/: 00-overview.py
docs/site/source/source/: conf.py
kafka/producer/: producer.py
kafka/producer/sample_data/: sampling.py
kafka_app/producer/: producer.py
kafka_app/producer/sample_data/: sampling.py
spark/streaming/app/: schema.py  streaming_job.py  transforms.py
spark/transformation/: batch_tranform.py
spark/transformation/transformations/: __init__.py  base.py  fare_metrics.py  speed.py  time_features.py
spark/transformation/utils_helper/: __init__.py  io_hepler.py
utils/: dummies.py
